build.gradle: Update jME to v3.7.0-stable